# SeqPy

./: README.md  setup.cfg
.ipynb_checkpoints/: hello-checkpoint.ipynb
SourceCode/: dna.py  fastq.py  file_parser.py  parser.py  seq.py
tests/: test_complement.py  test_correction.py  test_fasta_parser.py  test_fastq_parser.py  test_hamming_distance.py  test_is_dna.py  test_naive_edit_distance.py  test_transcription.py  test_translation.py
