[metadata]
name = SeqPy-Thomas-Shaffer
version = 0.0.1
author = Thomas Shaffer
author_email = tshaffer@berkeley.edu
description = Package to analyze and manipulate sequence data
long_description = file: README.md
long_description_content_type = text/markdown
#url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
